# paperclip

./: .continue-here.md  .gitignore  .mcp.json  .vercelignore  CLAUDE.md  CONTRIBUTING.md  arquitecturaagentes.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sprint-preview.html  vercel.json
.github/workflows/: deploy.yml  desktop-release.yml  docker.yml  e2e.yml  pr.yml  refresh-lockfile.yml  release-check.yml  release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v1.1-MILESTONE-AUDIT.md  v1.2-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md  v1.2-MILESTONE-AUDIT.md  v1.2-REQUIREMENTS.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
Archivos/: PLATAFORMA.docx  Requerimientos Plataforma(1).docx
app/: .env.example  middleware.ts  next.config.ts  package.json  tailwind.config.ts
cli/: package.json
docker/: docker-compose.dev.yml  docker-compose.local.yml
docs/: plan-ai-features.md
releases/: v0.6.3.md
scripts/: agent-runner.ts  dev-seed.sql  dev-sync-db.ts  release-desktop.sh  setup-tauri-icons.mjs  sync-dev-db.sh
server/: package.json
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev-local.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
ui/: index.html  package.json  vite.config.ts
(+970 files in other folders)
