[package]
name = "relay-control"
version = "0.3.0"
description = "Relay Control Desktop App"
authors = []
edition = "2021"

[lib]
name = "relay_control_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
